// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`receiveTimestamp > TimestampDuplicateNodeError 1`] = `
{
  "_id": "Either",
  "_tag": "Left",
  "left": {
    "_tag": "TimestampDuplicateNodeError",
    "node": "0000000000000001",
  },
}
`;

exports[`receiveTimestamp > should fail with clock drift 1`] = `
{
  "_id": "Either",
  "_tag": "Left",
  "left": {
    "_tag": "TimestampDriftError",
    "next": 300001,
    "now": 0,
  },
}
`;

exports[`receiveTimestamp > should fail with clock drift 2`] = `
{
  "_id": "Either",
  "_tag": "Left",
  "left": {
    "_tag": "TimestampDriftError",
    "next": 300001,
    "now": 0,
  },
}
`;

exports[`receiveTimestamp > wall clock is later than both the local and remote timestamps 1`] = `
{
  "counter": 0,
  "millis": 1,
  "node": "0000000000000001",
}
`;

exports[`receiveTimestamp > wall clock is somehow behind > for the same timestamps millis, we take the bigger counter 1`] = `
{
  "counter": 2,
  "millis": 1,
  "node": "0000000000000001",
}
`;

exports[`receiveTimestamp > wall clock is somehow behind > for the same timestamps millis, we take the bigger counter 2`] = `
{
  "counter": 2,
  "millis": 1,
  "node": "0000000000000001",
}
`;

exports[`receiveTimestamp > wall clock is somehow behind > local millis is later than remote 1`] = `
{
  "counter": 1,
  "millis": 2,
  "node": "0000000000000001",
}
`;

exports[`receiveTimestamp > wall clock is somehow behind > remote millis is later than local 1`] = `
{
  "counter": 1,
  "millis": 2,
  "node": "0000000000000001",
}
`;

exports[`sendTimestamp > should fail with clock drift 1`] = `
{
  "_id": "Either",
  "_tag": "Left",
  "left": {
    "_tag": "TimestampDriftError",
    "next": 300001,
    "now": 0,
  },
}
`;

exports[`sendTimestamp > should fail with counter overflow 1`] = `
{
  "_id": "Either",
  "_tag": "Left",
  "left": {
    "_tag": "TimestampCounterOverflowError",
  },
}
`;

exports[`sendTimestamp > should send monotonically with a monotonic clock 1`] = `
{
  "counter": 0,
  "millis": 1,
  "node": "0000000000000000",
}
`;

exports[`sendTimestamp > should send monotonically with a regressing clock 1`] = `
{
  "counter": 1,
  "millis": 1,
  "node": "0000000000000000",
}
`;

exports[`sendTimestamp > should send monotonically with a stuttering clock 1`] = `
{
  "counter": 1,
  "millis": 0,
  "node": "0000000000000000",
}
`;
